# Image-Retrieval-System

./: .gitignore
Source/: CMakeLists.txt  License.txt  main.cpp
Source/Libs/: CMakeLists.txt
Source/Libs/includes/: CmdFactory.hpp  Command.hpp  Histogram.hpp  SIFT.hpp
Source/Libs/src/: CmdFactory.cpp  Histogram.cpp  SIFT.cpp  SaveBinaryCV.cpp
Source/Main/: CMakeLists.txt
Source/includes/: Histogram.hpp  SIFT.hpp  command.hpp  factory.hpp
Source/src/: Histogram.cpp  SIFT.cpp  command.cpp  factory.cpp  main.cpp
